--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     }
     </script>
   <!-- Performance hints -->
+  <link rel="preconnect" href="https://mocha-cdn.com" />
+  <link rel="preconnect" href="https://images.unsplash.com" />
   <link rel="dns-prefetch" href="//fonts.googleapis.com" />
   <link rel="dns-prefetch" href="//fonts.gstatic.com" />
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&amp;display=swap"
